plugins {
    id "java-library"
    id 'signing'
    id "org.openjfx.javafxplugin" version "0.0.10"
    id 'io.codearte.nexus-staging' version '0.22.0'
    id 'de.marcphilipp.nexus-publish' version '0.4.0'
}

apply from: rootProject.file('gradle/mavenPublish.gradle')
// apply from: rootProject.file('gradle/code-quality.gradle')

sourceCompatibility = 11
targetCompatibility = 11

group = 'com.gluonhq'
version = '2.0.2-SNAPSHOT'

repositories {
    mavenCentral()
}

dependencies {
    api 'jakarta.json:jakarta.json-api:1.1.5'
    implementation 'javax.xml.bind:jaxb-api:2.3.1'

    testImplementation 'io.vertx:vertx-core:3.6.0'
    testImplementation 'org.testng:testng:7.4.0'
    testRuntimeOnly 'org.glassfish:jakarta.json:1.1.5:module'
}

compileJava {
    options.compilerArgs += [
            '--add-exports',
            'javafx.base/com.sun.javafx.event=com.gluonhq.connect'
    ]
}

javafx {
    version '15'
    modules 'javafx.graphics'
}

test {
    useTestNG()
}

javadoc {
    exclude("com/gluonhq/impl/**/*")
    options.addStringOption("-source-path", "src/main/java")
    options.addBooleanOption("javafx").setValue(true)
    options.links("https://openjfx.io/javadoc/" + "${javafx.version}".substring(0,2))
    options.links("https://docs.oracle.com/en/java/javase/" + JavaVersion.current().majorVersion + "/docs/api")
}
